ext/frc42_dispatch/macros/tests/naming/missing-name.stderr
error: unexpected end of input, expected string literal
  --> tests/naming/missing-name.rs:12:23
   |
12 |     let _ident_hash = method_hash!();
   |                       ^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `method_hash` (in Nightly builds, run with -Z macro-backtrace for more info)
